app_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: puppeteer-flask-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: puppeteer.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: puppeteer-flask-app
                port:
                  number: 5000
